# cim-subject

./: .clippy.toml  .gitignore  BUILD.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE  MODULE.md  compose.nix  container.nix  deny.toml  flake.nix  readme.md  rustfmt.toml
.github/: FUNDING.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  coverage.yml  release.yml
doc/: 01-overview.md  02-core-concepts.md  03-subject-algebra.md  04-message-identity.md  05-routing-patterns.md  06-ddd-integration.md  07-implementation-guide.md  08-api-reference.md  09-best-practices.md  10-troubleshooting.md  README.md
doc/design/: USER_STORIES.md  cim-subject-user-stories.md  cim-subject-workflow-diagrams.md
examples/: 01_basic_routing.rs  02_correlation_tracking.rs  03_subject_validation.rs  04_permissions.rs  05_algebra_operations.rs  06_translation.rs  07_nats_integration.rs  08_mortgage_lending_routing.rs  09_document_validation.rs  10_rate_shopping.rs  README.md
scripts/: test-and-save.sh
src/: algebra.rs  correlation.rs  error.rs  lib.rs  message_algebra.rs  parser.rs  pattern.rs  permissions.rs  subject.rs  translator.rs
tests/: algebra_tests.rs  pattern_matching_tests.rs  translator_tests.rs
